# python-infer-client

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: install-deps.sh
src/infer_client/: error.py  inference.py
src/infer_client/adapters/: __init__.py  onnx.py  triton.py  tritonclient_grpc_custom.py
tests/: test_inference.py
tests/resources/test_classify/1/: README
